invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_98.src
.IPPcode24
SETCHAR GF@e int bool@false